--- a/indexcodeqr.html
+++ b/indexcodeqr.html
@@ -8,6 +8,7 @@
 <body>
     Lector perron de qres
     <div id="qr-reader" style="width: 600px"></div> 
+    <p id="elidmasperrodelmundo"></p>
 
 
 
@@ -16,7 +17,10 @@
     <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
     <script>
     function onScanSuccess(decodedText, decodedResult) {
+        const parrafo = document.getElementById('elidmasperrodelmundo');
         console.log(`Code scanned = ${decodedText}`, decodedResult);
+        parrafo.innerText=decodedText+decodedResult;
+
     }
     var html5QrcodeScanner = new Html5QrcodeScanner(
         "qr-reader", { fps: 10, qrbox: 250 });
