--- a/indexcodeqr.html
+++ b/indexcodeqr.html
@@ -18,7 +18,7 @@
     <script>
     setTimeout(function (){
         const cuerpo = document.getElementById('cuerpo');
-        cuerpo.innerHTML+='<style>body{background-color: blue;}</style>';
+        cuerpo.innerHTML+='<style>body{background-color: red;}</style>';
     }, 1000)
     function onScanSuccess(decodedText, decodedResult) {
         const parrafo = document.getElementById('elidmasperrodelmundo');
